# step_and_obstacle_detection

./: CMakeLists.txt  package.xml
include/: downsampling.hpp  gpu_euclidean_cluster.hpp  obstacle_detect.hpp  plane_detect.hpp  plane_removal.hpp
launch/: downsample_and_detection.launch  downsample_and_plane_rm.launch
src/: downsampling.cpp  downsampling_node.cpp  gpu_euclidean_cluster.cpp  gpu_euclidean_cluster_node.cpp  obstacle_detect.cpp  obstacle_detect_node.cpp  plane_detect.cpp  plane_detect_node.cpp  plane_removal.cpp  plane_removal_node.cpp
